--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -79,6 +79,19 @@
 .icons {
     display: flex;
     gap: 10px;
+
+    a {
+        max-width: 59px;
+        min-width: 59px;
+        width: 59px;
+        aspect-ratio: 1;
+
+        img {
+            width: 100%;
+            padding: 10px;
+            background-color: $colorBrown;
+        }
+    }
 }
 
 
