--- a/src/components/layout/Plans/Plans.module.scss
+++ b/src/components/layout/Plans/Plans.module.scss
@@ -1,11 +1,13 @@
 @import "/src/Vars.scss";
 
+
 .title {
     text-align: center;
     line-height: 1.2;
     // font-size: 28px;
     font-size: clamp(1rem, 0.777rem + 0.92vw, 1.75rem);
 }
+
 
 .grid {
     padding: 40px 0;
@@ -18,7 +20,7 @@
         "item_1 item_2 item_4"
         "item_1 item_3 item_5";
 
-    @media (max-width: 992px) {
+    @media (max-width: 1100px) {
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
             "item_1 item_1 "
@@ -26,7 +28,7 @@
             "item_4 item_5";
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 900px) {
         grid-template-columns: 1fr ;
         grid-template-areas:
             "item_1 "
@@ -47,6 +49,7 @@
 .item_3 {
     grid-area: item_3;
     background-image: url(/plans-3.png);
+
 }
 .item_4 {
     grid-area: item_4;
@@ -66,6 +69,10 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
+    @media (max-width: 480px) {
+        min-height: 270px;
+    }
 
     &:hover {
         h3 {
@@ -90,6 +97,11 @@
         overflow: hidden;
         transition: all 0.3s;
     }
+
+    @media (max-width: 900px) {
+        text-align: center;
+        align-items: center;
+    }
 }
 
 
@@ -98,4 +110,13 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+
+    h4 {
+        font-size: 30px;
+    }
+
+    @media (max-width: 768px) {
+        display: none;
+        // order: 0;
+    }
 }
