--- a/src/components/layout/Incubator/Incubator.module.scss
+++ b/src/components/layout/Incubator/Incubator.module.scss
@@ -3,7 +3,80 @@
 
 .wrap {
     color: $colorBrown;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+
+    margin-top: 50px;
+
+    @media (max-width: 992px) {
+        grid-template-columns: 1fr;
+    }
+
 }
+
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+}
+
+.card {
+    border: 4px solid $colorBrown;
+    padding: 20px;
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    h3 {
+        // font-size: 35px;
+        font-size: clamp(1rem, 0.646rem + 1.45vw, 2.188rem);
+    }
+
+    h4 {
+        // font-size: 18px;
+        font-size: clamp(0.938rem, 0.882rem + 0.23vw, 1.125rem);
+    }
+
+    p {
+        // font-size: 18px;
+        font-size: clamp(0.938rem, 0.882rem + 0.23vw, 1.125rem);
+        color: #AEAEAE;
+    }
+
+    img {
+        max-width: 150px;
+        min-width: 150px;
+    }
+}
+
+.imgs {
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+        @media (max-width: 992px) {
+            // height: 600px;
+            aspect-ratio: 4/3;
+        }
+    }
+}
+
+
 .title {
     // font-size: 450px;
     font-size: clamp(5rem, -1.885rem + 28.24vw, 28.125rem);
