--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,36 @@ section {
     // background: #555;
 }
 
+// ANIMS
+
+.fadeIn {
+    opacity: 0;
+    animation: fadeIn 0.5s forwards ease-in-out;
+}
+
+.fadeOut {
+    opacity: 1;
+    animation: fadeOut 0.5s forwards ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
 // SWIPER
 
 .swiper-pagination {
