--- a/src/components/layout/Meet/Meet.module.scss
+++ b/src/components/layout/Meet/Meet.module.scss
@@ -45,7 +45,7 @@
     
     > img {
         
-        filter: brightness(1) sepia(15%) saturate(400%);
+        // filter: brightness(1) sepia(15%) saturate(400%);
     }
 }
 
