--- a/src/components/layout/Album/Album.module.scss
+++ b/src/components/layout/Album/Album.module.scss
@@ -10,9 +10,12 @@
 
 .album_swiper {
     margin-bottom: 6px;
+
 }
 
 
 .album_img {
+    max-height: 300px;
+    height: 100%;
     width: 100%;
 }
