--- a/src/components/layout/Plans/Plans.module.scss
+++ b/src/components/layout/Plans/Plans.module.scss
@@ -79,7 +79,7 @@
             font-size: 55px;
         }
         p {
-            height: 25px;
+            max-height: 100%;
         }
     }
 
@@ -93,9 +93,10 @@
         margin-top: 15px;
         color: #aeaeae;
 
-        height: 0;
+        max-height: 0;
         overflow: hidden;
-        transition: all 0.3s;
+        transition: all 0.8s ease-out;
+        padding-bottom: 3px;
     }
 
     @media (max-width: 900px) {
