--- a/src/components/layout/Capital/Capital.module.scss
+++ b/src/components/layout/Capital/Capital.module.scss
@@ -19,12 +19,13 @@
     h1 {
         // font-size: 280px;
         font-size: clamp(5rem, 1.279rem + 15.27vw, 17.5rem);
-        position: relative;
+        // position: relative;
         text-align: center;
-        margin-bottom: 70px;
+        // margin-bottom: 70px;
         // bottom: clamp(0rem, -2.233rem + 9.16vw, 7.5rem);
         line-height: 0.9;
         z-index: -1;
+        padding-top: 30px;
 
         @media (max-width: 768px) {
             margin-bottom: 40px;
