--- a/src/components/layout/Hero/Hero.module.scss
+++ b/src/components/layout/Hero/Hero.module.scss
@@ -13,15 +13,13 @@
     text-align: center;
 
     h1 {
-        // font-family: serif;
-        // font-size: 580px;
         font-size: clamp(6.875rem, -1.47rem + 35.88vw, 36.25rem);
-        position: relative;
-        // top: -120px;
-        bottom: clamp(0rem, -2.233rem + 9.16vw, 7.5rem);
-        // padding-bottom: 50px;
-        line-height: 0.8;
         z-index: -1;
+        line-height: 0.8;
+
+        @media (max-width: 768px) {
+            padding-top: 50px;
+        }
     }
 
     p {
@@ -31,5 +29,37 @@
 
     img {
         width: 100%;
+    }
+
+    .bottom {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+
+        @media (max-width: 480px) {
+            justify-content: center;
+            text-align: center;
+        }
+
+        h3 {
+            font-weight: 600;
+            font-size: 26px;
+
+            // &:last-child {
+            //     filter: drop-shadow(2px 2px 1px rgba(0, 0, 0, 0.5));
+            // }
+
+            @media (max-width: 480px) {
+                font-size: 20px;
+                font-weight: 400;
+                filter: none !important;
+
+                &:first-child {
+                    display: none;
+                }   
+            }
+        }
     }
 }
