--- a/src/components/layout/Meet/Meet.module.scss
+++ b/src/components/layout/Meet/Meet.module.scss
@@ -36,6 +36,11 @@
         max-width: 600px;
         margin-left: auto;
         text-align: right;
+
+        @media (max-width: 768px) {
+            text-align: center;
+            margin-top: 0;
+        }
     }
 
     img {
