--- a/src/components/layout/Team/Team.module.scss
+++ b/src/components/layout/Team/Team.module.scss
@@ -16,11 +16,12 @@
         font-size: clamp(3.75rem, 0.029rem + 15.27vw, 16.25rem);
         color: $colorBrown;
         line-height: 1.2;
-        margin-bottom: 100px;
+        // margin-bottom: 100px;
 
         @media (max-width: 992px) {
-            margin-bottom: 50px;
+            // margin-bottom: 50px;
             text-align: center;
+            line-height: 0.8;
         }
     }
 }
