--- a/src/components/layout/Value/Value.module.scss
+++ b/src/components/layout/Value/Value.module.scss
@@ -86,7 +86,7 @@
     h3 {
         writing-mode: horizontal-tb;
         position: absolute;
-        bottom: 30px;
+        bottom: 20px;
         left: 30px;
         font-size: 50px;
 
@@ -95,7 +95,7 @@
         max-width: 30px;
         overflow: hidden;
         white-space: nowrap;
-        padding-bottom: 5px;
+        // padding-bottom: 5px;
         letter-spacing: 20px;
     }
 
@@ -164,10 +164,11 @@
     justify-content: space-between;
     gap: 30px;
     align-items: center;
+    padding-top: 60px;
 
     h3 {
         // font-size: 200px;
-        font-size: clamp(3.125rem, 0.334rem + 11.45vw, 12.5rem);
+        font-size: clamp(3.125rem, 1.334rem + 11.45vw, 12.5rem);
         color: $colorPink;
     }
 
@@ -175,11 +176,12 @@
         flex-direction: column;
         padding-bottom: 50px;
         text-align: center;
+        padding-top: 0;
     }
 }
 
 .content_box {
-    padding-top: 60px;
+    // padding-top: 60px;
     display: flex;
     flex-direction: column;
     gap: 20px;
