--- a/src/components/ui/Loader/Loader.module.scss
+++ b/src/components/ui/Loader/Loader.module.scss
@@ -1,5 +1,8 @@
-@import '/src/Vars.scss';
+@import "/src/Vars.scss";
 
+.hidden {
+    display: none !important;
+}
 
 .loader {
     height: 100dvh;
@@ -14,7 +17,6 @@
     background-size: cover;
     background-position: center;
 }
-
 
 .loading {
     width: 200px;
@@ -31,9 +33,9 @@
 
     .inner_circle {
         display: block;
-        position: relative;
-        top: -5px;
-        right: -5px;
+        // position: relative;
+        // top: -5px;
+        // right: -5px;
     }
 
     @media (max-width: 480px) {
@@ -43,24 +45,23 @@
     }
 }
 
-
 .enter {
     text-align: center;
     color: $colorBeige;
-    position: relative; 
-    top: -50px;
+    // position: relative;
+    // top: -50px;
 
     animation: animFade 1s;
 
     h2 {
         // font-size: 250px;
         font-size: clamp(3.75rem, 0.215rem + 14.5vw, 15.625rem);
-        position: relative;
+        // position: relative;
 
-        top: -30px;
+        // top: -30px;
 
         @media (max-width: 480px) {
-            top: -15px;
+            // top: -15px;
         }
     }
 
@@ -72,7 +73,6 @@
     @media (max-width: 480px) {
         top: 0;
     }
-
 }
 
 .loader_top {
@@ -93,9 +93,7 @@
         // font-size: 28px;
         font-size: clamp(1.125rem, 0.939rem + 0.76vw, 1.75rem);
     }
-
 }
-
 
 .loader_bottom {
     position: fixed;
@@ -130,13 +128,12 @@
         right: 30px;
 
         @media (max-width: 480px) {
-            position: static;   
+            position: static;
             margin-top: 10px;
             width: 50px;
         }
     }
 }
-
 
 @keyframes animFade {
     0% {
@@ -164,7 +161,3 @@
         bottom: 0;
     }
 }
-
-
-
-
